Prevent wrapping between spinner and presence icon

--- a/src/take_attendance/src/index.css
+++ b/src/take_attendance/src/index.css
@@ -55,6 +55,7 @@
 
 .AttendanceRecord .presence {
     text-align: right;
+    white-space:nowrap;
 }
 
 .AttendanceRecord.present:nth-child(even) {
